--- a/package.json
+++ b/package.json
@@ -2,28 +2,42 @@
   "name": "quiz-app-for-nptel-practice",
   "version": "0.1.0",
   "private": true,
+  "type" : "module",
   "scripts": {
     "dev": "next dev",
+    "worker": "node ./src/lib/bullmq/workers/zomatoWorker.js",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.917.0",
+    "@bull-board/api": "^6.14.0",
+    "@bull-board/express": "^6.14.0",
     "@clerk/nextjs": "^6.33.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.9.1",
     "@tabler/icons-react": "^3.35.0",
     "axios": "^1.12.2",
+    "bullmq": "^5.61.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.24",
+    "fs": "^0.0.1-security",
+    "ioredis": "^5.8.2",
     "lucide-react": "^0.546.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
